--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
             app:civ_border_width="1dp"
-            app:civ_border_color="#FFFEFE"
+            app:civ_border_color="#A74CF6"
             />
 
         <SeekBar
@@ -84,14 +84,40 @@
 
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/btnplay"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/play"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnPre"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/ic_baseline_skip_previous_24" />
+
+        <Button
+
+            android:id="@+id/btnplay"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_baseline_play_arrow_24"
+
+            />
+
+        <Button
+            android:id="@+id/btnNext"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/ic_baseline_skip_next_24" />
+
+
+    </LinearLayout>
+
 <!--    <com.gauravk.audiovisualizer.visualizer.BlastVisualizer-->
 <!--        xmlns:custom="http://schemas.android.com/apk/res-auto"-->
 <!--        android:id="@+id/blast"-->
