--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Song 1"
-        android:textColor="#020000"
+        android:textColor="#FFFFFF"
         android:textSize="17sp"
         android:textStyle="bold"
 
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Song 1"
-        android:textColor="#020000"
+        android:textColor="#FFFFFF"
         android:textSize="17sp"
         android:textStyle="italic"
 
